update worout exercises
